--- a/ProyectoDiagrama/src/proyectodiagrama/popUp.fxml
+++ b/ProyectoDiagrama/src/proyectodiagrama/popUp.fxml
@@ -6,10 +6,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="150.0" prefWidth="400.0" style="-fx-background-color: #BDBFBD;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1" fx:controller="proyectodiagrama.PopUpController">
+<AnchorPane id="AnchorPane" prefHeight="150.0" prefWidth="400.0" style="-fx-background-color: #BDBFBD;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="proyectodiagrama.PopUpController">
    <children>
-      <Label layoutX="73.0" layoutY="29.0" text="Ingrese nombre de la identidad:">
+      <Label layoutX="81.0" layoutY="29.0" text="Ingrese nombre de la entidad:">
          <font>
             <Font size="18.0" />
          </font>
