--- a/ProyectoDiagrama/src/fxmls/proyectoDiagramaFXML.fxml
+++ b/ProyectoDiagrama/src/fxmls/proyectoDiagramaFXML.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+<?import proyectodiagrama.*?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1200.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="proyectodiagrama.ProyectoDiagramaController">
    <children>
